Mise à jour Bundle

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,4 @@
-app:
-    resource: '@AppBundle/Controller/'
-    type: annotation
+cat:
+    resource: "@SkiBundle/Controller/"
+    type:     annotation
+    prefix:   /
