--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "AppBundle\\": "src/AppBundle"
+            "CatBundle\\": "src/CatBundle",
         },
         "classmap": [
             "app/AppKernel.php",
