--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "SkiBundle\\": "src/SkiBundle"
+            "SkiBundle\\": "src/SkiBundle",
+            "UserBundle\\": "src/UserBundle"
         },
         "classmap": [
             "app/AppKernel.php",
