--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -32,8 +32,8 @@ security:
                 target: /
 
     access_control:
-        - { path: ^/$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/account, role: ROLE_USER }
-        - { path: ^/admin, role: ROLE_ADMIN }
+        - { path: ^/$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/account, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
