--- a/src/SkiBundle/Resources/config/services.yml
+++ b/src/SkiBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-#    cat.example:
-#        class: CatBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+    station.map.generate:
+        class: SkiBundle\Services\MapService
+        arguments: [ "@doctrine.orm.entity_manager" ]
