--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -9,6 +9,7 @@ imports:
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: fr
+    avatars_directory: '%kernel.project_dir%/web/bundles/ski/img/avatars'
 
 framework:
     #esi: ~
